sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/Item_Location_Lot__c.object-meta.xml
<CustomObject>
    <label>Item Location Lot</label>
    <nameField>
        <label>Inventory Lot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Location Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>