sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Adjust_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Quantity__c</fullName>
    <label>Adjust Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>