sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Date__c</fullName>
    <label>Batch Date</label>
    <type>Date</type>
</CustomField>