sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Count</label>
    <type>Checkbox</type>
</CustomField>