sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Item Location Lots</relationshipLabel>
    <relationshipName>Item_Location_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>