sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Inventory_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Id__c</fullName>
    <formula>Item_Location__r.Inventory_Item__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item Id</label>
    <type>Text</type>
</CustomField>