sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Item_Location__c.field-meta.xml
<CustomField>
    <fullName>Item_Location__c</fullName>
    <label>Inventory Item Location</label>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Item Location Lots (Batches)</relationshipLabel>
    <relationshipName>Item_Location_Lots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>