sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Lot_Name__c.field-meta.xml
<CustomField>
    <fullName>Lot_Name__c</fullName>
    <label>Lot Name</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>