sfSandBoxCode/force-app/main/default/objects/Item_Location_Lot__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity</label>
    <precision>17</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>